@@ -5,6 +5,10 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Modify crl2pkcs7 so it supports multiple -certfile arguments. Fix a
+     few typos.
+     [Steve Henson]
+
   *) Fixes to BN code.  Previously the default was to define BN_RECURSION
      but the BN code had some problems that would cause failures when
      doing certificate verification and some other functions.
